kubernetes/06-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adrion-ingress
  namespace: adrion
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: adrion.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uap-frontend
            port:
              number: 8003
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: uap-backend
            port:
              number: 8002
